--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "luxon": "^3.5.0",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-for-echarts": "^1.0.0",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
     "web-vitals": "^4.2.4"
